fix all sections and footer's width dynamic according to global spacing

--- a/src/global.css
+++ b/src/global.css
@@ -10,7 +10,14 @@
 
   --font-size-base: 10px;
   font-size: 10px;
+
+  --container-spacing: 5%;
 }
+
+/* DEV: shows all element's position */
+/* [data-is="page"]>* * {
+  outline: 1px dashed #3ebef545;
+} */
 
 * {
   margin: 0;
